--- a/AtividadeBimestral/app/src/main/res/layout/activity_main.xml
+++ b/AtividadeBimestral/app/src/main/res/layout/activity_main.xml
@@ -6,25 +6,28 @@
     android:layout_height="match_parent"
     tools:context="com.example.aluno.atividadebimestral.MainActivity">
 
+    <ListView
+        android:id="@+id/listaFocoEndemia"
+        android:layout_width="366dp"
+        android:layout_height="339dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/button"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
         android:onClick="chamarTelaCadastrar"
-        android:text="Cadastrar Focus"
+        android:text="Cadastrar Focos"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ListView
-        android:id="@+id/listaFocoEndemia"
-        android:layout_width="368dp"
-        android:layout_height="443dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="60dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
