--- a/AtividadeBimestral/app/src/main/res/layout/activity_tela_cadastrar_foco.xml
+++ b/AtividadeBimestral/app/src/main/res/layout/activity_tela_cadastrar_foco.xml
@@ -69,6 +69,7 @@
         android:layout_marginTop="8dp"
         android:onClick="inserir"
         android:text="Cadastrar"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
