--- a/AtividadeBimestral/app/src/main/res/layout/activity_tela_calcular_indice_predial.xml
+++ b/AtividadeBimestral/app/src/main/res/layout/activity_tela_calcular_indice_predial.xml
@@ -14,6 +14,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="DIGITE A QUANTIDADE DE IMÓVEIS COM AEDES:"
+        android:textColor="#000000"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -39,6 +41,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="DIGITE A QUANTIDADE DE ÍMOVEIS INSPECIONADOS:"
+        android:textColor="#000000"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editValor1" />
@@ -65,6 +69,7 @@
         android:layout_marginTop="8dp"
         android:onClick="calcularInfestacao"
         android:text="Calcular"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editValor2" />
